; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_pointer_promo_type.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_pointer_promo_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pointer_promo_map = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pointer_promo_type(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32* @map_get(i32* @pointer_promo_map, i32* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  store i32* %11, i32** %2, align 8
  br label %12

12:                                               ; preds = %10, %9
  %13 = load i32*, i32** %2, align 8
  ret i32* %13
}

declare dso_local i32* @map_get(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
